--- a/Kiss-Fodor Zsombor/Frontend/index.html
+++ b/Kiss-Fodor Zsombor/Frontend/index.html
@@ -90,8 +90,8 @@
 <body>
     <!-- Menü -->
     <div class="navbar">
-        <a href="#" onclick="loadContent('Simple_list')">Egyszerű lista</a>
-        <a href="#" onclick="loadContent('Simle_list_with_url')">Lista URL</a>
+        <a href="#" onclick="loadContent('ElementMaking')">1</a>
+        <a href="#" onclick="loadContent('FunctionChanging')">2</a>
         <a href="#" onclick="loadContent('Simple_list_with_popup')">Lista Popup</a>
         <a href="#" onclick="loadContent('Simple_list_animation')">Lista Animation</a>
         <a href="#" onclick="loadContent('table')">Táblázat</a>
@@ -120,16 +120,16 @@
         function loadContent(page) {
             const content = document.getElementById('content');
             switch (page) {
-                case 'Simple_list':
+                case 'ElementMaking':
                     content.innerHTML = `
-                        <h2>Simple list </h2>
-                        <iframe src="Vue_egyszerü_komponens.html" width="100%" height="400px" style="border:none;"></iframe>
+                        <h2>Elem Létrehozása gombal</h2>
+                        <iframe src="elementcreation.html" width="100%" height="400px" style="border:none;"></iframe>
                     `;
                     break;
-                case 'Simle_list_with_url':
+                case 'FunctionChanging':
                     content.innerHTML = `
-                        <h2>Simple list URL</h2>
-                        <iframe src="Simle_list_with_url.html" width="100%" height="400px" style="border:none;"></iframe>
+                        <h2>Stílus változtatása gombal</h2>
+                        <iframe src="szoveg.html" width="100%" height="400px" style="border:none;"></iframe>
                     `;
                     break;
                     case 'Simple_list_with_popup':
