--- a/Kiss-Fodor Zsombor/Frontend/elementcreation.html
+++ b/Kiss-Fodor Zsombor/Frontend/elementcreation.html
@@ -42,7 +42,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Új Div tag kreálás</title>
+    <link rel="icon" type="image/x-icon" href="burger.jpg">
 
 </head>
 <body>
