--- a/Kiss-Fodor Zsombor/Frontend/delay.html
+++ b/Kiss-Fodor Zsombor/Frontend/delay.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Késtetéses változtató</title>
+    <link rel="icon" type="image/x-icon" href="burger.jpg">
+    
     <style>
         body {
             align-items: center;
