--- a/Kiss-Fodor Zsombor/Frontend/numbersorting.html
+++ b/Kiss-Fodor Zsombor/Frontend/numbersorting.html
@@ -3,52 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>tömb generálása és rendezése</title>
+    <link rel="icon" type="image/x-icon" href="burger.jpg">
+
 </head>
 <body>
     <button onclick="numberchanger('+')">+</button>
-    <h2 id="NAKED">0</h2>
+    <h2 id="NAKED">2</h2>
     <button onclick="numberchanger('-')">-</button>
     <h1 id="LIQUID"></h1>
     <h1 id="SOLID"></h1>
-    <button onclick="test2()">Generate Numbers</button>
-    <button onclick="test3()" id="SOLIDUS" style="display: none;">Sort Numbers</button>
+    <button onclick="GenArray()">Generate Numbers</button>
+    <button onclick="ArraySort()" id="SOLIDUS" style="display: none;">Sort Numbers</button>
 </body>
 
 <script> 
     let arrayu = [];
-    let generatingNumbers = 0;
+    let generatingNumbers = 2;
     dispiNumber = document.getElementById("NAKED");
 
     function numberchanger(increment) {
-        console.log(increment);
-        if (increment = "+") {
+        //console.log(increment);
+        if (increment == "+") {
             generatingNumbers++;
         }
-        else if (increment = '-') {
-            if (generatingNumbers != 1) {
+        else if (increment == '-') {
+            if (generatingNumbers > 2) {
                 generatingNumbers--;
             }
         }
         dispiNumber.textContent = generatingNumbers;
     }
 
-    function test() {
+    function ShowGeneration() {
         testH = document.getElementById("LIQUID");
         testH.textContent = arrayu;
         sortbutton = document.getElementById("SOLIDUS");
         sortbutton.style.display = "inline";
     }
 
-    function test2() {
-        for(i = 0; i < 10; i++) {
+    function GenArray() {
+        if (generatingNumbers > 1) {
+            arrayu = [];
+        for(i = 0; i < generatingNumbers; i++) {
             arrayu[i] = Math.floor(Math.random() * 101);
         }
-        console.log(arrayu);
-        test();
+        //console.log(arrayu);
+        ShowGeneration();
+        } else {
+            alert("kérlek adj meg többet mint 1!")
+        }
+        
     }
 
-    function test3() {
+    function ArraySort() {
         arrayu.sort();
         testH2 = document.getElementById("SOLID");
         testH2.textContent = arrayu;
