--- a/Kiss-Fodor Zsombor/Frontend/szoveg.html
+++ b/Kiss-Fodor Zsombor/Frontend/szoveg.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Elem változtatása</title>
+    <link rel="icon" type="image/x-icon" href="burger.jpg">
 </head>
 <body>
     <div id="inp" style="margin: auto; width: 40%; text-align: center; border-style: solid; border-radius: 3px;">TEXT</div>
